--- a/index2.html
+++ b/index2.html
@@ -24,8 +24,8 @@
             maxlength="5"><br/>
            
             <input type= "submit" value= "OK" ><!--Submit adiciona um botão de enviar-->
-            <br/><label>Observações sjbcisjudaxbciuaskj</label><br/>
-            <textarea>Digite algoeusadnbqwnbcoiew4</textarea><br/>
+            <br/><label>Observações</label><br/>
+            <textarea>Digite algo</textarea><br/>
             <label>Estado:</label><br/>
             <select>
                 <option value="SP">São Paulo</option>
@@ -33,13 +33,13 @@
                 <option value="MG">MInas Gerais</option>
                 <option value="RS">Rio Grande do Sul</option>
             </select>
-            <label>Selecione a disciplina wquohiucsagbciyw:</label><br/>
+            <label>Selecione a disciplina:</label><br/>
             <input type="checkbox" value="TecW">TecWeb<br/>
             <input type="checkbox" value="DevOp">DevOps<br/>
             <input type="checkbox" value="LpII II">Linguagem de Programação II<br/>
             <input type="checkbox" value="Eng">Engenharia de Software<br/>
            
-            <label>Selecione uma linguagem: hwsuqohb    cu</label><br/><br/>
+            <label>Selecione uma linguagem:</label><br/><br/>
             <input type="radio" name="opcao"value="Jav">Java<br/><br/>
             <input type="radio" name="opcao" value="Payt">Python<br/><br/>
             <input type="radio" name="opcao"value="C">C#<br/><br/>
